fish imgs added with additional layout/styling

--- a/index.html
+++ b/index.html
@@ -5,7 +5,112 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Martin's Aquarium</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="styles/main.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Martins Aquarium</h1>
+    </header>
+    <main>
+      <article class="fish-list">
+        <!-- Fish #1 -->
+        <div class="card" style="width: 18rem">
+          <img
+            src="imgs/adolphos-catfish.jpeg"
+            class="card-img-top"
+            alt="Adolphos Catfish"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Adolphos Catfish</h5>
+            <p class="card-text">
+              Adolfo’s catfish (lat. Corydoras adolfoi) is a small-sized,
+              brightly colored, and peaceful aquarium catfish.
+            </p>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Species</li>
+            <li class="list-group-item">Length</li>
+            <li class="list-group-item">Harvest Location</li>
+            <li class="list-group-item">Diet</li>
+          </ul>
+        </div>
+        <!-- Fish #2 -->
+        <div class="card" style="width: 18rem">
+          <img
+            src="imgs/siamese-algae-eater.jpeg"
+            class="card-img-top"
+            alt="Siamese Algae Eater"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Siamese Algae Eater</h5>
+            <p class="card-text">
+              Siamese Algae Eater (lat. Crossocheilus oblongus) is a fish of the
+              Cyprinidae family. The fish is peaceful, not very large, and it is
+              a true tank cleaner.
+            </p>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Species</li>
+            <li class="list-group-item">Length</li>
+            <li class="list-group-item">Harvest Location</li>
+            <li class="list-group-item">Diet</li>
+          </ul>
+        </div>
+        <!-- Fish #3 -->
+        <div class="card" style="width: 18rem">
+          <img
+            src="imgs/altum-angelfish.jpeg"
+            class="card-img-top"
+            alt="Altum Angelfish"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Altum Angelfish</h5>
+            <p class="card-text">
+              Altum angelfish (lat. Pterophyllum altum) is one of three kinds of
+              freshwater angelfishes, and this is the largest representative of
+              its kind.
+            </p>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Species</li>
+            <li class="list-group-item">Length</li>
+            <li class="list-group-item">Harvest Location</li>
+            <li class="list-group-item">Diet</li>
+          </ul>
+        </div>
+      </article>
+      <aside>
+        <h2 class="fish-tips-heading">Fish Tips</h2>
+        <h3>Tank</h3>
+        <ul>
+          <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+          <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+          <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+        </ul>
+        <h3>Water</h3>
+        <ul>
+          <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+          <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+          <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+        </ul>
+      </aside>
+    </main>
+    <footer></footer>
+  </body>
+  <script
+    src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+    crossorigin="anonymous"
+  ></script>
 </html>
