stock imgs added, initial fish added to fishCollection array

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         <!-- Fish #1 -->
         <div class="card" style="width: 18rem">
           <img
-            src="imgs/adolphos-catfish.jpeg"
+            src="imgs/Goldfish_BlackMoor.png"
             class="card-img-top"
-            alt="Adolphos Catfish"
+            alt="Captain Jack"
           />
           <div class="card-body">
-            <h5 class="card-title">Adolphos Catfish</h5>
+            <h5 class="card-title">Captain Jack</h5>
             <p class="card-text">
-              Adolfo’s catfish (lat. Corydoras adolfoi) is a small-sized,
-              brightly colored, and peaceful aquarium catfish.
+              Unlike other fancy goldfish types, this breed is extremely
+              enduring and can make good pets for new fishkeepers.
             </p>
           </div>
           <ul class="list-group list-group-flush">
@@ -43,16 +43,15 @@
         <!-- Fish #2 -->
         <div class="card" style="width: 18rem">
           <img
-            src="imgs/siamese-algae-eater.jpeg"
+            src="imgs/Goldfish_BlackMoor.png"
             class="card-img-top"
-            alt="Siamese Algae Eater"
+            alt="Pacific"
           />
           <div class="card-body">
-            <h5 class="card-title">Siamese Algae Eater</h5>
+            <h5 class="card-title">Pacific</h5>
             <p class="card-text">
-              Siamese Algae Eater (lat. Crossocheilus oblongus) is a fish of the
-              Cyprinidae family. The fish is peaceful, not very large, and it is
-              a true tank cleaner.
+              One of the most fragile goldfish types and probably the slowest
+              swimmers.
             </p>
           </div>
           <ul class="list-group list-group-flush">
@@ -65,16 +64,14 @@
         <!-- Fish #3 -->
         <div class="card" style="width: 18rem">
           <img
-            src="imgs/altum-angelfish.jpeg"
+            src="imgs/Goldfish_BlackMoor.png"
             class="card-img-top"
             alt="Altum Angelfish"
           />
           <div class="card-body">
-            <h5 class="card-title">Altum Angelfish</h5>
+            <h5 class="card-title">Finley</h5>
             <p class="card-text">
-              Altum angelfish (lat. Pterophyllum altum) is one of three kinds of
-              freshwater angelfishes, and this is the largest representative of
-              its kind.
+              Nicknamed “stargazers” because their eyes are locked upward.
             </p>
           </div>
           <ul class="list-group list-group-flush">
@@ -113,4 +110,5 @@
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
     crossorigin="anonymous"
   ></script>
+  <script src="scripts/FishDataProvider.js"></script>
 </html>
