bootstrap layout markup added to index.html

--- a/index.html
+++ b/index.html
@@ -18,71 +18,82 @@
       <h1>Martins Aquarium</h1>
     </header>
     <main>
-      <article class="fish-list">
-        <!-- Fish #1 -->
-        <div class="card" style="width: 18rem">
-          <img
-            src="imgs/Goldfish_BlackMoor.png"
-            class="card-img-top"
-            alt="Captain Jack"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Captain Jack</h5>
-            <p class="card-text">
-              Unlike other fancy goldfish types, this breed is extremely
-              enduring and can make good pets for new fishkeepers.
-            </p>
+      <article class="container">
+        <section class="martin-info">
+          <div class="row">
+            <div class="col martin-visited">Places Martin has visited.</div>
+            <div class="col martin-quotes">Martin's quotes.</div>
           </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">Species</li>
-            <li class="list-group-item">Length</li>
-            <li class="list-group-item">Harvest Location</li>
-            <li class="list-group-item">Diet</li>
-          </ul>
-        </div>
-        <!-- Fish #2 -->
-        <div class="card" style="width: 18rem">
-          <img
-            src="imgs/Goldfish_BlackMoor.png"
-            class="card-img-top"
-            alt="Pacific"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Pacific</h5>
-            <p class="card-text">
-              One of the most fragile goldfish types and probably the slowest
-              swimmers.
-            </p>
+        </section>
+        <div class="row">
+          <div class="col">
+            <div class="card" style="width: 18rem">
+              <img
+                src="imgs/Goldfish_BlackMoor.png"
+                class="card-img-top"
+                alt="Captain Jack"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Captain Jack</h5>
+                <p class="card-text">
+                  Unlike other fancy goldfish types, this breed is extremely
+                  enduring and can make good pets for new fishkeepers.
+                </p>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">Species</li>
+                <li class="list-group-item">Length</li>
+                <li class="list-group-item">Harvest Location</li>
+                <li class="list-group-item">Diet</li>
+              </ul>
+            </div>
           </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">Species</li>
-            <li class="list-group-item">Length</li>
-            <li class="list-group-item">Harvest Location</li>
-            <li class="list-group-item">Diet</li>
-          </ul>
-        </div>
-        <!-- Fish #3 -->
-        <div class="card" style="width: 18rem">
-          <img
-            src="imgs/Goldfish_BlackMoor.png"
-            class="card-img-top"
-            alt="Altum Angelfish"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Finley</h5>
-            <p class="card-text">
-              Nicknamed “stargazers” because their eyes are locked upward.
-            </p>
+          <div class="col">
+            <div class="card" style="width: 18rem">
+              <img
+                src="imgs/Goldfish_BlackMoor.png"
+                class="card-img-top"
+                alt="Pacific"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Pacific</h5>
+                <p class="card-text">
+                  One of the most fragile goldfish types and probably the
+                  slowest swimmers.
+                </p>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">Species</li>
+                <li class="list-group-item">Length</li>
+                <li class="list-group-item">Harvest Location</li>
+                <li class="list-group-item">Diet</li>
+              </ul>
+            </div>
           </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">Species</li>
-            <li class="list-group-item">Length</li>
-            <li class="list-group-item">Harvest Location</li>
-            <li class="list-group-item">Diet</li>
-          </ul>
+          <div class="col">
+            <div class="card" style="width: 18rem">
+              <img
+                src="imgs/Goldfish_BlackMoor.png"
+                class="card-img-top"
+                alt="Altum Angelfish"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Finley</h5>
+                <p class="card-text">
+                  Nicknamed “stargazers” because their eyes are locked upward.
+                </p>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">Species</li>
+                <li class="list-group-item">Length</li>
+                <li class="list-group-item">Harvest Location</li>
+                <li class="list-group-item">Diet</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </article>
-      <aside>
+      <aside class="fish-tips">
         <h2 class="fish-tips-heading">Fish Tips</h2>
         <h3>Tank</h3>
         <ul>
