components added for Fish.js, FishList.js, exports/imports included

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="col martin-quotes">Martin's quotes.</div>
           </div>
         </section>
-        <div class="row">
+        <!-- <div class="row">
           <div class="col">
             <div class="card" style="width: 18rem">
               <img
@@ -91,7 +91,7 @@
               </ul>
             </div>
           </div>
-        </div>
+        </div> -->
       </article>
       <aside class="fish-tips">
         <h2 class="fish-tips-heading">Fish Tips</h2>
@@ -121,5 +121,5 @@
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
     crossorigin="anonymous"
   ></script>
-  <script src="scripts/FishDataProvider.js"></script>
+  <script src="scripts/main.js" type="module"></script>
 </html>
