fish imgs added for fishCollection

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <div class="col martin-quotes">Martin's quotes.</div>
           </div>
         </section>
-        <!-- <div class="row">
-          <div class="col">
+        <div class="row fishList">
+          <!-- <div class="col">
             <div class="card" style="width: 18rem">
               <img
                 src="imgs/Goldfish_BlackMoor.png"
@@ -90,8 +90,8 @@
                 <li class="list-group-item">Diet</li>
               </ul>
             </div>
-          </div>
-        </div> -->
+          </div> -->
+        </div>
       </article>
       <aside class="fish-tips">
         <h2 class="fish-tips-heading">Fish Tips</h2>
