description added to Fish component

--- a/index.html
+++ b/index.html
@@ -26,71 +26,7 @@
           </div>
         </section>
         <div class="row fishList">
-          <!-- <div class="col">
-            <div class="card" style="width: 18rem">
-              <img
-                src="imgs/Goldfish_BlackMoor.png"
-                class="card-img-top"
-                alt="Captain Jack"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Captain Jack</h5>
-                <p class="card-text">
-                  Unlike other fancy goldfish types, this breed is extremely
-                  enduring and can make good pets for new fishkeepers.
-                </p>
-              </div>
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item">Species</li>
-                <li class="list-group-item">Length</li>
-                <li class="list-group-item">Harvest Location</li>
-                <li class="list-group-item">Diet</li>
-              </ul>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card" style="width: 18rem">
-              <img
-                src="imgs/Goldfish_BlackMoor.png"
-                class="card-img-top"
-                alt="Pacific"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Pacific</h5>
-                <p class="card-text">
-                  One of the most fragile goldfish types and probably the
-                  slowest swimmers.
-                </p>
-              </div>
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item">Species</li>
-                <li class="list-group-item">Length</li>
-                <li class="list-group-item">Harvest Location</li>
-                <li class="list-group-item">Diet</li>
-              </ul>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card" style="width: 18rem">
-              <img
-                src="imgs/Goldfish_BlackMoor.png"
-                class="card-img-top"
-                alt="Altum Angelfish"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Finley</h5>
-                <p class="card-text">
-                  Nicknamed “stargazers” because their eyes are locked upward.
-                </p>
-              </div>
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item">Species</li>
-                <li class="list-group-item">Length</li>
-                <li class="list-group-item">Harvest Location</li>
-                <li class="list-group-item">Diet</li>
-              </ul>
-            </div>
-          </div> -->
+          <!-- content rendered by main.js -->
         </div>
       </article>
       <aside class="fish-tips">
