tips autopopulating index.html with js components

--- a/index.html
+++ b/index.html
@@ -53,20 +53,9 @@
           <!-- content rendered by main.js -->
         </div>
       </article>
-      <aside class="fish-tips">
+      <aside class="tipList">
         <h2 class="fish-tips-heading">Fish Tips</h2>
-        <h3>Tank</h3>
-        <ul>
-          <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
-          <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
-          <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
-        </ul>
-        <h3>Water</h3>
-        <ul>
-          <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
-          <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
-          <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
-        </ul>
+        <!-- content rendered by main.js -->
       </aside>
     </main>
     <footer></footer>
