locations autopopulating index.html with js components

--- a/index.html
+++ b/index.html
@@ -21,32 +21,8 @@
       <article class="container">
         <section class="martin-info">
           <div class="row">
-            <div class="col martin-visited">
-              <h2>Martin's Favorite Locations</h2>
-              <ul>
-                <li>Summersville Lake - Summersville, West Virginia</li>
-                <li>Jennings Randolph Lake - Garrett County, Maryland</li>
-                <li>Cheat Lake - Morgantown, West Virginia</li>
-              </ul>
-            </div>
-            <div class="col martin-quotes">
-              <h2>Favorite Quotes</h2>
-              <ul>
-                <li>
-                  "There's a fine line between fishing and just standing on the
-                  shore like an idiot." - Steven Wright
-                </li>
-                <li>
-                  "If I fished only to capture fish, my fishing trips would have
-                  ended long ago." - Zane Grey
-                </li>
-                <li>
-                  "Give a man a fish and he will eat for a day. Teach him how to
-                  fish, and he will sit in a boat and drink beer all day." -
-                  George Carlin
-                </li>
-              </ul>
-            </div>
+            <h2>Favorite Locations</h2>
+            <!-- content rendered by main.js -->
           </div>
         </section>
         <div class="row fishList">
