centering for locations and tips heading

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
       <article class="container">
         <section class="martin-info">
-          <h2>Favorite Locations</h2>
+          <h2 id="locations-heading">Favorite Locations</h2>
           <div class="row">
             <!-- content rendered by main.js -->
           </div>
