--- a/index.html
+++ b/index.html
@@ -86,7 +86,12 @@
         <!-- content rendered by main.js -->
       </aside>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-container">
+        <p>Martin's Aquarium</p>
+        <p>&copy; 2021</p>
+      </div>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
