html added for mayan fish below favorite locations

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </header>
     <main>
       <article class="container">
+        <!-- Favorite Locations -->
         <section class="martin-info">
           <h2 id="locations-heading">Favorite Locations</h2>
           <div
@@ -77,6 +78,19 @@
             </button>
           </div>
         </section>
+        <!-- Mayan Fish -->
+        <section class="mayan-fish">
+          <div class="holy-fish">
+            <h2>Holy Fish</h2>
+          </div>
+          <div class="soldier-fish">
+            <h2>Soldier Fish</h2>
+          </div>
+          <div class="regular-fish">
+            <h2>Regular Fish</h2>
+          </div>
+        </section>
+        <!-- All Fish Collection -->
         <div class="row fishList">
           <!-- content rendered by main.js -->
         </div>
