mayanFishList function completed

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
           <div class="soldier-fish">
             <h2>Soldier Fish</h2>
           </div>
-          <div class="regular-fish">
-            <h2>Regular Fish</h2>
+          <div class="nonHoly-fish">
+            <h2>Non Holy Fish</h2>
           </div>
         </section>
         <!-- All Fish Collection -->
