fish populating in respective mayan fish headings

--- a/index.html
+++ b/index.html
@@ -82,12 +82,15 @@
         <section class="mayan-fish">
           <div class="holy-fish">
             <h2>Holy Fish</h2>
+            <!-- content rendered by main.js -->
           </div>
           <div class="soldier-fish">
             <h2>Soldier Fish</h2>
+            <!-- content rendered by main.js -->
           </div>
           <div class="nonHoly-fish">
             <h2>Non Holy Fish</h2>
+            <!-- content rendered by main.js -->
           </div>
         </section>
         <!-- All Fish Collection -->
